# jade

./: .clang-tidy  .env.template  .gitignore  .ignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt  config.example.json
.github/workflows/: tests.yml
cmake/: Findasio.cmake
docs/: Installing.md  Libraries.md  README.md  Terminology and categorisation.md
docs/dev/: Search.md
etc/systemd/system/: jade.service
scripts/: install.sh  update.sh
scripts/dev/: dbinit.sh  purge.sh  purgeDev.sh  setup-testdb.sh
src/: CMakeLists.txt
src/jade/: Main.cpp
src/jade/api/: APIProvider.cpp  APIProvider.hpp
src/jade/api/auth/: AuthAPI.cpp  AuthAPI.hpp
src/jade/api/books/: BookAPI.cpp  BookAPI.hpp
src/jade/api/settings/: SettingsAPI.cpp  SettingsAPI.hpp
src/jade/cli/: CLIMigrations.cpp  CLIMigrations.hpp
src/jade/conf/: ServerConfig.cpp  ServerConfig.hpp
src/jade/core/: ContextProvider.cpp  ContextProvider.hpp  Macros.hpp  Server.cpp  Server.hpp  Typedefs.hpp
src/jade/data/: AuthRequest.cpp  AuthRequest.hpp  BookRequests.cpp  BookRequests.hpp  SettingsRequests.cpp  SettingsRequests.hpp  User.cpp  User.hpp
src/jade/data/db/: Book.cpp  Book.hpp
src/jade/db/: ConnectionPool.cpp  ConnectionPool.hpp  DBHelper.hpp  Migration.cpp  Migration.hpp  MigrationInstance.hpp
src/jade/db/migrations/: 00Order.hpp  00README.md  01Initial.hpp
src/jade/db/security/: Hash.cpp  Hash.hpp
src/jade/health/: HealthCheck.hpp  HealthCore.hpp
src/jade/meta/: Common.hpp
src/jade/security/: Random.hpp
src/jade/server/: AuthWall.hpp  BaseMiddlewares.cpp  BaseMiddlewares.hpp  CacheHelper.cpp  CacheHelper.hpp  ErrorHandler.hpp  SessionMiddleware.cpp  SessionMiddleware.hpp  UserContextMiddleware.cpp  UserContextMiddleware.hpp
src/jade/settings/: ServerSettings.hpp
src/jade/util/: Constants.hpp  InterruptableThread.cpp  InterruptableThread.hpp  Response.hpp  ResponseUtil.cpp  ResponseUtil.hpp  Util.hpp
src/jade/web/: WebProvider.cpp  WebProvider.hpp
tests/: CMakeLists.txt
tests/html/: paginator.html
tests/src/: Conf.hpp  Main.cpp
tests/src/system/: AuthTests.cpp
tests/src/unit/: InterruptableThread.cpp  InterruptableThreadTests.cpp  SearchParsingTests.cpp
tests/src/util/: DynamicWorkloadIntThread.hpp  ServerWrapper.cpp  ServerWrapper.hpp  VFix.hpp
tests/web/: constants.py
tests/web/integration/: test_auth.py
tests/web/standalone_js/: test_paginator.py
tests/web/utils/: defaults.py  driver.py  server.py
www/: error.mustache  index.mustache  licenses.mustache  login.mustache  open-source.mustache  reader.mustache
www/auth/: login.mustache  signup.mustache
www/help/: search.mustache
www/listings/: book.mustache  books.mustache
www/partials/: body.mustache  footer.mustache  head.mustache  header.mustache  sidebar.mustache
www/settings/: admin.mustache  health.mustache
www/static/css/: foliate.css  style.css
www/static/js/: admin-settings.js  auth.js  global.js  paginator.js  reader.js
www/static/js/components/: filter.js  paginator.js
www/static/js/foliate-js/: README.md
www/static/js/pages/: book-admin.js  book.js  login.js  signup.js
www/templates/: book.mustache  filter.mustache  paginator.mustache
